--- a/app/views/topics/edit.html.slim
+++ b/app/views/topics/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing topic
 
 == render 'form'
 
-= link_to 'Show', @topic
-'|
-= link_to 'Back', topics_path
-
+.row
+	.small-9.small-offset-3.columns
+		= link_to 'Show', @topic, class: "button tiny"
+		= link_to 'Back', topics_path, class: "button tiny"
