--- a/app/views/topics/index.html.slim
+++ b/app/views/topics/index.html.slim
@@ -1,21 +1,22 @@
 h1 Listing topics
 
 table
-  tr
-    th Title
-    th Description
-    th
-    th
-    th
-
-  - @topics.each do |topic|
+  thead
     tr
-      td = topic.title
-      td = topic.description
-      td = link_to 'Show', topic
-      td = link_to 'Edit', edit_topic_path(topic)
-      td = link_to 'Destroy', topic, data: {:confirm => 'Are you sure?'}, :method => :delete
+      th Title
+      th Description
+      th
+      th
+      th
+  tbody
+    - @topics.each do |topic|
+      tr
+        td = topic.title
+        td = topic.description
+        td = link_to 'Show', topic
+        td = link_to 'Edit', edit_topic_path(topic)
+        td = link_to 'Destroy', topic, data: {:confirm => 'Are you sure?'}, :method => :delete
 
 br
 
-= link_to 'New Topic', new_topic_path
+= link_to 'New Topic', new_topic_path, class: "button radius"
