--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -18,4 +18,4 @@
       -if current_user
         ul.left
           li= link_to "Topics", topics_path
-          li= link_to "Videos", videos_path
+          /li= link_to "Videos", videos_path
