--- a/app/views/topics/_form.html.slim
+++ b/app/views/topics/_form.html.slim
@@ -1,7 +1,7 @@
 = form_for @topic do |f|
   - if @topic.errors.any?
     #error_explanation
-      h2 = "#{pluralize(@topic.errors.count, "error")} prohibited this topic from being saved:"
+      = "#{pluralize(@topic.errors.count, "error")} prohibited this topic from being saved:"
       ul
         - @topic.errors.full_messages.each do |message|
           li = message
