--- a/app/views/topics/videos/_form.html.slim
+++ b/app/views/topics/videos/_form.html.slim
@@ -1,7 +1,7 @@
-= form_for @video do |f|
+= form_for [@topic, @video] do |f|
   - if @video.errors.any?
     #error_explanation
-      h2 = "#{pluralize(@video.errors.count, "error")} prohibited this video from being saved:"
+      = "#{pluralize(@video.errors.count, "error")} prohibited this video from being saved:"
       ul
         - @video.errors.full_messages.each do |message|
           li = message
