--- a/app/views/topics/videos/edit.html.slim
+++ b/app/views/topics/videos/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing video
 
 == render 'form'
 
-= link_to 'Show', @video
+= link_to 'Show', topic_video_path(@topic, @video)
 '|
-= link_to 'Back', videos_path
+= link_to 'Back', topic_path
 
