--- a/app/views/topics/videos/show.html.slim
+++ b/app/views/topics/videos/show.html.slim
@@ -10,6 +10,6 @@ p
   strong Description:
   = @video.description
 
-= link_to 'Edit', edit_video_path(@video)
+= link_to 'Edit', edit_topic_video_path(@topic, @video)
 '|
-= link_to 'Back', videos_path
+= link_to 'Back', topic_path
