--- a/app/views/groups/videos/show.html.slim
+++ b/app/views/groups/videos/show.html.slim
@@ -10,6 +10,6 @@ p
   strong Description:
   = @video.description
 
-= link_to 'Edit', edit_topic_video_path(@topic, @video)
+= link_to 'Edit', edit_group_video_path(@group, @video)
 '|
-= link_to 'Back', topic_path
+= link_to 'Back', group_path
