--- a/app/views/shared/_nav.html.slim
+++ b/app/views/shared/_nav.html.slim
@@ -17,5 +17,5 @@
           li= link_to "Sign up", signup_path
       -if current_user
         ul.left
-          li= link_to "Topics", topics_path
+          li= link_to "groups", groups_path
           /li= link_to "Videos", videos_path
