custom authorization stuff

--- a/app/views/groups/index.html.slim
+++ b/app/views/groups/index.html.slim
@@ -1,4 +1,4 @@
-- if !current_user.nil?
+- unless current_user.nil?
   .row
     = link_to '+ New group', new_group_path, class: "button radius right"
     - @groups.each do |group|
