--- a/app/views/groups/show.html.slim
+++ b/app/views/groups/show.html.slim
@@ -9,10 +9,14 @@ p#notice = notice
 - @group.videos.each do |video|
 	.row
 		.medium-12.columns
-			h2 = link_to video.title, video.source
+			h2 = link_to video.title, group_video_path(@group, video)
 	.row
 		.medium-9.columns = video.description
 		.medium-3.columns
 			= link_to "Edit", edit_group_video_path(@group, video)
 			'  | 
 			= link_to "Remove", group_video_path(@group, video), data: {:confirm => 'Are you sure?'}, :method => :delete
+
+.row 
+	medium-12.columns
+		p = link_to 'Create', new_group_video_path(@group), class: "button"
