--- a/app/views/groups/videos/_form.html.slim
+++ b/app/views/groups/videos/_form.html.slim
@@ -15,4 +15,4 @@
   .field
     = f.label :description
     = f.text_field :description
-  .actions = f.submit 'Save'
+  .actions = f.submit 'Save', class: "button"
