--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -15,4 +15,4 @@
   .field
     = f.label :password_confirmation
     = f.password_field :password_confirmation
-  .actions = f.submit 'Save'
+  .actions = f.submit 'Save', class: "button"
