added authorization to groups and videos

--- a/app/views/groups/index.html.slim
+++ b/app/views/groups/index.html.slim
@@ -5,10 +5,11 @@
       h2 = link_to "#{group.title}", group
       p = group.description
       p 
-      p 
-        = link_to 'Edit', edit_group_path(group)
-        |  | 
-        = link_to 'Destroy', group, data: {:confirm => 'Are you sure?'}, :method => :delete
+      - if current_user.role == 'admin'
+        p 
+          = link_to 'Edit', edit_group_path(group)
+          |  | 
+          = link_to 'Destroy', group, data: {:confirm => 'Are you sure?'}, :method => :delete
 
   br
 
