custom user authorization

--- a/app/assets/stylesheets/foundation_and_overrides.scss
+++ b/app/assets/stylesheets/foundation_and_overrides.scss
@@ -1205,7 +1205,7 @@ $topbar-link-bg-hover: #1d60b8;
   "foundation/components/inline-lists",
   // "foundation/components/joyride",
   // "foundation/components/keystrokes",
-  // "foundation/components/labels",
+  "foundation/components/labels",
   // "foundation/components/magellan",
   // "foundation/components/orbit",
   // "foundation/components/pagination",
