--- a/app/views/users/show.html.slim
+++ b/app/views/users/show.html.slim
@@ -1,6 +1,6 @@
 p#notice = notice
 
-h2
+h1
   = @user.email
 p
   strong Role:
@@ -11,3 +11,23 @@ p
 	= link_to 'Edit', edit_user_path(@user)
 	'|
 	= link_to 'Back', users_path
+hr
+
+/ h3 Groups
+/ ul
+/ - @user.groups.each do |group|
+
+h2 Videos
+table.table
+	th Title
+	th Group
+	th
+	tbody
+		- @user.videos.each do |video|
+			tr
+				td = link_to video.title, group_video_path(video.group, video)
+				td = link_to video.group.title, group_path(video.group)
+				td = link_to "Edit", edit_group_video_path(video.group, video)
+				td = link_to "Destroy", group_video_path(video.group, video), data: {:confirm => 'Are you sure?'}, :method => :delete
+
+
