--- a/app/views/groups/videos/edit.html.slim
+++ b/app/views/groups/videos/edit.html.slim
@@ -1,8 +1,8 @@
 h1 Editing video
 
-== render 'form'
+== render 'form_edit'
 
-= link_to 'Show', group_video_path(@group, @video)
+= link_to 'Show', video_path(@video)
 '|
-= link_to 'Back', group_path
+= link_to 'Back', group_path(@group)
 
