updated video comment paths, added user view

--- a/app/views/groups/videos/show.html.slim
+++ b/app/views/groups/videos/show.html.slim
@@ -21,20 +21,5 @@ p
 p = link_to "Comment", new_video_comment_path(@video), class: "button radius"
 
 hr
-.comments
-	- @video.comments.each do |comment|
-		h4
-			small
-				| Posted by 
-				span = link_to comment.user.email, comment.user
-				'  
-				span = comment.created_at.strftime("on %m/%d/%y at %I:%M:%p")
-		.clearfix
-			- if comment.source
-				.left = raw youtube_embed comment.source, 240, 180
-			p = comment.text
 
-		- if is_comment_owner?(comment)
-			= link_to "Edit", edit_video_comment_path(@video,comment)
-		hr
-
+== render "comments"
