--- a/app/views/comments/_form.html.slim
+++ b/app/views/comments/_form.html.slim
@@ -12,4 +12,4 @@
   .field
     = f.label :text
     = f.text_field :text
-  .actions = f.submit 'Save'
+  .actions = f.submit 'Save', class: "button radius"
