--- a/app/views/comments/edit.html.slim
+++ b/app/views/comments/edit.html.slim
@@ -2,7 +2,7 @@ h1 Editing comment
 
 == render 'form'
 
-= link_to 'Show', @comment
+= link_to 'Show', video_comment_path(@video, @comment)
 '|
-= link_to 'Back', comments_path
+= link_to 'Back', video_comments_path(@video)
 
